# gpv2-exotique-neroflux

./: .gitattributes  .gitignore  LICENSE  MODULE.md  README.md  pyproject.toml
docs/: GPV2_EXOTIQUE_ALETHEIA.md
examples/: basic_flow.json  post_maj_reflection.json
schemas/: aletheia.schema.json  neroflux.schema.json
src/gpv2_neroflux/: __init__.py  aletheia.py  neroflux.py
tests/: test_neroflux.py
